--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   ktuberling-20240218.tar.bz2: 514cdc7779c12af1d892f6e5fd651f1e4fdcbddf
+  ktuberling-24.02.0.tar.xz: f10751bfadf84e510e2e3ec63b4ab6ec7d1f2e94
